--- a/package.json
+++ b/package.json
@@ -11,35 +11,35 @@
   },
   "_moduleAliases": {
     "@shared": "dist/shared",
-    "@server": "dist/Server"
+    "@server": "dist/Server",
+    "@interfaces": "dist/interfaces/index",
+    "@services": "dist/services",
+    "@constants": "dist/shared/constants/index"
   },
   "dependencies": {
     "command-line-args": "^5.1.1",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-async-errors": "^3.1.1",
     "helmet": "^3.22.0",
     "http-status-codes": "^1.4.0",
     "module-alias": "^2.2.2",
     "morgan": "^1.10.0",
+    "superagent": "^5.2.2",
     "winston": "^3.2.1"
   },
   "devDependencies": {
     "@types/command-line-args": "^5.0.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.6",
-    "@types/find": "^0.2.1",
     "@types/helmet": "0.0.47",
-    "@types/jsonfile": "^6.0.0",
+    "@types/jasmine": "^3.5.10",
     "@types/morgan": "^1.9.0",
     "@types/node": "^14.0.1",
-    "@types/supertest": "^2.0.9",
-    "find": "^0.3.0",
+    "@types/superagent": "^4.1.7",
     "fs-extra": "^9.0.0",
-    "jsonfile": "^6.0.1",
+    "jasmine": "^3.5.0",
     "nodemon": "^2.0.3",
-    "supertest": "^4.0.2",
     "ts-node": "^8.10.1",
     "tsconfig-paths": "^3.9.0",
     "tslint": "^6.1.2",
